tweaking some tests